--- a/roles/backend/tasks/setup.yml
+++ b/roles/backend/tasks/setup.yml
@@ -5,13 +5,10 @@
     accept_hostkey: yes
   tags: update
 
-- name: Install python
+- name: Install psycopg
   become: yes
   apt:
     pkg:
-      - python3
-      - python3-pip
-      - python3-venv
       # For psycopg2
       - python3-psycopg2
       - libpq-dev
