--- a/vars/secrets.template.yml
+++ b/vars/secrets.template.yml
@@ -14,3 +14,7 @@ healthchecks_update:
 healthchecks_backup:
 
 letsencrypt_email:
+
+# GitHub ssh keys for backend PR task
+id_ed25519:
+id_ed25519_pub:
