--- a/roles/backend/defaults/main.yml
+++ b/roles/backend/defaults/main.yml
@@ -7,3 +7,4 @@ backend_tmc_repo: "/home/{{ username }}/tmc-backend"
 frontend_url: https://nonmatch.netlify.app
 backend_server: backend
 backend_use_ssl: no
+redis_url: redis://localhost
